fonal visszafelé is mehet, spóra megevése,